Robledo_Miguel_prac3/build/parser.output
Terminals unused in grammar

    BOOLEAN


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement ENDLINE statement_list
    3               | statement

    4 statement: assignment
    5          | expression
    6          | statement COMMENT
    7          | repeat_statement
    8          | if_statement
    9          | if_else_statement
   10          | switch_statement
   11          | while_statement
   12          | do_until_statement
   13          | for_statement
   14          | ε

   15 if_statement: IF expression_bool THEN marker statement_list FI marker

   16 if_else_statement: IF expression_bool THEN marker statement_then else_part FI marker

   17 else_part: ELSE marker statement_list

   18 statement_then: statement_list

   19 switch_statement: SWITCH LPAREN expression_switch RPAREN ENDLINE marker case_list marker default_clause ENDLINE FSWITCH marker

   20 expression_switch: expression

   21 case_list: case_list case_block ENDLINE
   22          | ε

   23 case_block: midrule_block statement_list BREAK SEMICOLON

   24 midrule_block: CASE INTEGER COLON ENDLINE marker

   25 default_clause: DEFAULT COLON ENDLINE marker statement_list BREAK SEMICOLON

   26 while_statement: marker WHILE expression_bool DO marker statement_list DONE

   27 do_until_statement: DO marker statement_list UNTIL expression_bool

   28 for_statement: marker for_first DO statement_list DONE marker

   29 for_first: FOR ID IN expression DOT DOT expression

   30 expression_bool: expr_bool_and
   31                | expression_bool OR marker expr_bool_and

   32 expr_bool_and: expr_bool_not
   33              | expr_bool_and AND marker expr_bool_not

   34 marker: ε

   35 expr_bool_not: NOT expr_bool_not
   36              | primary_bool

   37 primary_bool: LPAREN expression_bool RPAREN
   38             | expr_bool

   39 expr_bool: expression EQ expression
   40          | expression NE expression
   41          | expression GT expression
   42          | expression GE expression
   43          | expression LT expression
   44          | expression LE expression

   45 repeat_statement: REPEAT repeat_expression DO statement_list DONE

   46 repeat_expression: expression

   47 assignment: ID ASSIGN expression
   48           | array_access ASSIGN expression

   49 expression: expression_list

   50 expression_list: expression_list COMMA expr_arithmetic
   51                | expr_arithmetic

   52 expr_arithmetic: expr_unary
   53                | expr_arithmetic PLUS expr_unary
   54                | expr_arithmetic MINUS expr_unary

   55 expr_unary: expr_term
   56           | PLUS expr_unary
   57           | MINUS expr_unary

   58 expr_term: factor
   59          | expr_term MULT factor
   60          | expr_term DIV factor
   61          | expr_term MOD factor

   62 factor: array_access
   63       | ID
   64       | INTEGER
   65       | STRING
   66       | REAL
   67       | PI
   68       | E
   69       | LPAREN expression RPAREN

   70 array_access: ID LBRACKET expr_arithmetic RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN <no_value> (258) 47 48
    ENDLINE <no_value> (259) 2 19 21 24 25
    INTEGER <integer> (260) 24 64
    ID <ident> (261) 29 47 63 70
    REAL <real> (262) 66
    STRING <string> (263) 65
    BOOLEAN <boolean> (264)
    PLUS (265) 53 56
    MINUS (266) 54 57
    MULT (267) 59
    DIV (268) 60
    MOD (269) 61
    GT (270) 41
    GE (271) 42
    LT (272) 43
    LE (273) 44
    EQ (274) 39
    NE (275) 40
    NOT (276) 35
    AND (277) 33
    OR (278) 31
    PI (279) 67
    E (280) 68
    LBRACKET (281) 70
    RBRACKET (282) 70
    LPAREN (283) 19 37 69
    RPAREN (284) 19 37 69
    COMMA (285) 50
    DOT (286) 29
    COLON (287) 24 25
    SEMICOLON (288) 23 25
    COMMENT (289) 6
    REPEAT <ident> (290) 45
    DO (291) 26 27 28 45
    DONE (292) 26 28 45
    IF <ident> (293) 15 16
    THEN (294) 15 16
    ELSE (295) 17
    FI (296) 15 16
    SWITCH (297) 19
    CASE (298) 24
    DEFAULT (299) 25
    BREAK (300) 23 25
    FSWITCH (301) 19
    WHILE (302) 26
    UNTIL (303) 27
    FOR (304) 29
    IN (305) 29


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1
        on right: 0
    statement_list (53)
        on left: 2 3
        on right: 1 2 15 17 18 23 25 26 27 28 45
    statement (54)
        on left: 4 5 6 7 8 9 10 11 12 13 14
        on right: 2 3 6
    if_statement <ident> (55)
        on left: 15
        on right: 8
    if_else_statement <ident> (56)
        on left: 16
        on right: 9
    else_part <statement> (57)
        on left: 17
        on right: 16
    statement_then <statement> (58)
        on left: 18
        on right: 16
    switch_statement <ident> (59)
        on left: 19
        on right: 10
    expression_switch <ident> (60)
        on left: 20
        on right: 19
    case_list <statement> (61)
        on left: 21 22
        on right: 19 21
    case_block <statement> (62)
        on left: 23
        on right: 21
    midrule_block <statement> (63)
        on left: 24
        on right: 23
    default_clause <statement> (64)
        on left: 25
        on right: 19
    while_statement <ident> (65)
        on left: 26
        on right: 11
    do_until_statement <ident> (66)
        on left: 27
        on right: 12
    for_statement <ident> (67)
        on left: 28
        on right: 13
    for_first <statement> (68)
        on left: 29
        on right: 28
    expression_bool <ident> (69)
        on left: 30 31
        on right: 15 16 26 27 31 37
    expr_bool_and <ident> (70)
        on left: 32 33
        on right: 30 31 33
    marker <marker> (71)
        on left: 34
        on right: 15 16 17 19 24 25 26 27 28 31 33
    expr_bool_not <ident> (72)
        on left: 35 36
        on right: 32 33 35
    primary_bool <ident> (73)
        on left: 37 38
        on right: 36
    expr_bool <ident> (74)
        on left: 39 40 41 42 43 44
        on right: 38
    repeat_statement (75)
        on left: 45
        on right: 7
    repeat_expression <ident> (76)
        on left: 46
        on right: 45
    assignment (77)
        on left: 47 48
        on right: 4
    expression <ident> (78)
        on left: 49
        on right: 5 20 29 39 40 41 42 43 44 46 47 48 69
    expression_list <ident> (79)
        on left: 50 51
        on right: 49 50
    expr_arithmetic <ident> (80)
        on left: 52 53 54
        on right: 50 51 53 54 70
    expr_unary <ident> (81)
        on left: 55 56 57
        on right: 52 53 54 56 57
    expr_term <ident> (82)
        on left: 58 59 60 61
        on right: 55 59 60 61
    factor <ident> (83)
        on left: 62 63 64 65 66 67 68 69
        on right: 58 59 60 61
    array_access <ident> (84)
        on left: 70
        on right: 48 62


State 0

    0 $accept: • program $end

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9
    REPEAT   shift, and go to state 10
    DO       shift, and go to state 11
    IF       shift, and go to state 12
    SWITCH   shift, and go to state 13

    WHILE     reduce using rule 34 (marker)
    FOR       reduce using rule 34 (marker)
    $default  reduce using rule 14 (statement)

    program             go to state 14
    statement_list      go to state 15
    statement           go to state 16
    if_statement        go to state 17
    if_else_statement   go to state 18
    switch_statement    go to state 19
    while_statement     go to state 20
    do_until_statement  go to state 21
    for_statement       go to state 22
    marker              go to state 23
    repeat_statement    go to state 24
    assignment          go to state 25
    expression          go to state 26
    expression_list     go to state 27
    expr_arithmetic     go to state 28
    expr_unary          go to state 29
    expr_term           go to state 30
    factor              go to state 31
    array_access        go to state 32


State 1

   64 factor: INTEGER •

    $default  reduce using rule 64 (factor)


State 2

   47 assignment: ID • ASSIGN expression
   63 factor: ID •
   70 array_access: ID • LBRACKET expr_arithmetic RBRACKET

    ASSIGN    shift, and go to state 33
    LBRACKET  shift, and go to state 34

    $default  reduce using rule 63 (factor)


State 3

   66 factor: REAL •

    $default  reduce using rule 66 (factor)


State 4

   65 factor: STRING •

    $default  reduce using rule 65 (factor)


State 5

   56 expr_unary: PLUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expr_unary    go to state 36
    expr_term     go to state 30
    factor        go to state 31
    array_access  go to state 37


State 6

   57 expr_unary: MINUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expr_unary    go to state 38
    expr_term     go to state 30
    factor        go to state 31
    array_access  go to state 37


State 7

   67 factor: PI •

    $default  reduce using rule 67 (factor)


State 8

   68 factor: E •

    $default  reduce using rule 68 (factor)


State 9

   69 factor: LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 39
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 10

   45 repeat_statement: REPEAT • repeat_expression DO statement_list DONE

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    repeat_expression  go to state 40
    expression         go to state 41
    expression_list    go to state 27
    expr_arithmetic    go to state 28
    expr_unary         go to state 29
    expr_term          go to state 30
    factor             go to state 31
    array_access       go to state 37


State 11

   27 do_until_statement: DO • marker statement_list UNTIL expression_bool

    $default  reduce using rule 34 (marker)

    marker  go to state 42


State 12

   15 if_statement: IF • expression_bool THEN marker statement_list FI marker
   16 if_else_statement: IF • expression_bool THEN marker statement_then else_part FI marker

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    NOT      shift, and go to state 43
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 44

    expression_bool  go to state 45
    expr_bool_and    go to state 46
    expr_bool_not    go to state 47
    primary_bool     go to state 48
    expr_bool        go to state 49
    expression       go to state 50
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 13

   19 switch_statement: SWITCH • LPAREN expression_switch RPAREN ENDLINE marker case_list marker default_clause ENDLINE FSWITCH marker

    LPAREN  shift, and go to state 51


State 14

    0 $accept: program • $end

    $end  shift, and go to state 52


State 15

    1 program: statement_list •

    $default  reduce using rule 1 (program)


State 16

    2 statement_list: statement • ENDLINE statement_list
    3               | statement •
    6 statement: statement • COMMENT

    ENDLINE  shift, and go to state 53
    COMMENT  shift, and go to state 54

    $default  reduce using rule 3 (statement_list)


State 17

    8 statement: if_statement •

    $default  reduce using rule 8 (statement)


State 18

    9 statement: if_else_statement •

    $default  reduce using rule 9 (statement)


State 19

   10 statement: switch_statement •

    $default  reduce using rule 10 (statement)


State 20

   11 statement: while_statement •

    $default  reduce using rule 11 (statement)


State 21

   12 statement: do_until_statement •

    $default  reduce using rule 12 (statement)


State 22

   13 statement: for_statement •

    $default  reduce using rule 13 (statement)


State 23

   26 while_statement: marker • WHILE expression_bool DO marker statement_list DONE
   28 for_statement: marker • for_first DO statement_list DONE marker

    WHILE  shift, and go to state 55
    FOR    shift, and go to state 56

    for_first  go to state 57


State 24

    7 statement: repeat_statement •

    $default  reduce using rule 7 (statement)


State 25

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 26

    5 statement: expression •

    $default  reduce using rule 5 (statement)


State 27

   49 expression: expression_list •
   50 expression_list: expression_list • COMMA expr_arithmetic

    COMMA  shift, and go to state 58

    $default  reduce using rule 49 (expression)


State 28

   51 expression_list: expr_arithmetic •
   53 expr_arithmetic: expr_arithmetic • PLUS expr_unary
   54                | expr_arithmetic • MINUS expr_unary

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60

    $default  reduce using rule 51 (expression_list)


State 29

   52 expr_arithmetic: expr_unary •

    $default  reduce using rule 52 (expr_arithmetic)


State 30

   55 expr_unary: expr_term •
   59 expr_term: expr_term • MULT factor
   60          | expr_term • DIV factor
   61          | expr_term • MOD factor

    MULT  shift, and go to state 61
    DIV   shift, and go to state 62
    MOD   shift, and go to state 63

    $default  reduce using rule 55 (expr_unary)


State 31

   58 expr_term: factor •

    $default  reduce using rule 58 (expr_term)


State 32

   48 assignment: array_access • ASSIGN expression
   62 factor: array_access •

    ASSIGN  shift, and go to state 64

    $default  reduce using rule 62 (factor)


State 33

   47 assignment: ID ASSIGN • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 65
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 34

   70 array_access: ID LBRACKET • expr_arithmetic RBRACKET

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expr_arithmetic  go to state 66
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 35

   63 factor: ID •
   70 array_access: ID • LBRACKET expr_arithmetic RBRACKET

    LBRACKET  shift, and go to state 34

    $default  reduce using rule 63 (factor)


State 36

   56 expr_unary: PLUS expr_unary •

    $default  reduce using rule 56 (expr_unary)


State 37

   62 factor: array_access •

    $default  reduce using rule 62 (factor)


State 38

   57 expr_unary: MINUS expr_unary •

    $default  reduce using rule 57 (expr_unary)


State 39

   69 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 67


State 40

   45 repeat_statement: REPEAT repeat_expression • DO statement_list DONE

    DO  shift, and go to state 68


State 41

   46 repeat_expression: expression •

    $default  reduce using rule 46 (repeat_expression)


State 42

   27 do_until_statement: DO marker • statement_list UNTIL expression_bool

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9
    REPEAT   shift, and go to state 10
    DO       shift, and go to state 11
    IF       shift, and go to state 12
    SWITCH   shift, and go to state 13

    WHILE     reduce using rule 34 (marker)
    FOR       reduce using rule 34 (marker)
    $default  reduce using rule 14 (statement)

    statement_list      go to state 69
    statement           go to state 16
    if_statement        go to state 17
    if_else_statement   go to state 18
    switch_statement    go to state 19
    while_statement     go to state 20
    do_until_statement  go to state 21
    for_statement       go to state 22
    marker              go to state 23
    repeat_statement    go to state 24
    assignment          go to state 25
    expression          go to state 26
    expression_list     go to state 27
    expr_arithmetic     go to state 28
    expr_unary          go to state 29
    expr_term           go to state 30
    factor              go to state 31
    array_access        go to state 32


State 43

   35 expr_bool_not: NOT • expr_bool_not

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    NOT      shift, and go to state 43
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 44

    expr_bool_not    go to state 70
    primary_bool     go to state 48
    expr_bool        go to state 49
    expression       go to state 50
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 44

   37 primary_bool: LPAREN • expression_bool RPAREN
   69 factor: LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    NOT      shift, and go to state 43
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 44

    expression_bool  go to state 71
    expr_bool_and    go to state 46
    expr_bool_not    go to state 47
    primary_bool     go to state 48
    expr_bool        go to state 49
    expression       go to state 72
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 45

   15 if_statement: IF expression_bool • THEN marker statement_list FI marker
   16 if_else_statement: IF expression_bool • THEN marker statement_then else_part FI marker
   31 expression_bool: expression_bool • OR marker expr_bool_and

    OR    shift, and go to state 73
    THEN  shift, and go to state 74


State 46

   30 expression_bool: expr_bool_and •
   33 expr_bool_and: expr_bool_and • AND marker expr_bool_not

    AND  shift, and go to state 75

    $default  reduce using rule 30 (expression_bool)


State 47

   32 expr_bool_and: expr_bool_not •

    $default  reduce using rule 32 (expr_bool_and)


State 48

   36 expr_bool_not: primary_bool •

    $default  reduce using rule 36 (expr_bool_not)


State 49

   38 primary_bool: expr_bool •

    $default  reduce using rule 38 (primary_bool)


State 50

   39 expr_bool: expression • EQ expression
   40          | expression • NE expression
   41          | expression • GT expression
   42          | expression • GE expression
   43          | expression • LT expression
   44          | expression • LE expression

    GT  shift, and go to state 76
    GE  shift, and go to state 77
    LT  shift, and go to state 78
    LE  shift, and go to state 79
    EQ  shift, and go to state 80
    NE  shift, and go to state 81


State 51

   19 switch_statement: SWITCH LPAREN • expression_switch RPAREN ENDLINE marker case_list marker default_clause ENDLINE FSWITCH marker

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression_switch  go to state 82
    expression         go to state 83
    expression_list    go to state 27
    expr_arithmetic    go to state 28
    expr_unary         go to state 29
    expr_term          go to state 30
    factor             go to state 31
    array_access       go to state 37


State 52

    0 $accept: program $end •

    $default  accept


State 53

    2 statement_list: statement ENDLINE • statement_list

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9
    REPEAT   shift, and go to state 10
    DO       shift, and go to state 11
    IF       shift, and go to state 12
    SWITCH   shift, and go to state 13

    WHILE     reduce using rule 34 (marker)
    FOR       reduce using rule 34 (marker)
    $default  reduce using rule 14 (statement)

    statement_list      go to state 84
    statement           go to state 16
    if_statement        go to state 17
    if_else_statement   go to state 18
    switch_statement    go to state 19
    while_statement     go to state 20
    do_until_statement  go to state 21
    for_statement       go to state 22
    marker              go to state 23
    repeat_statement    go to state 24
    assignment          go to state 25
    expression          go to state 26
    expression_list     go to state 27
    expr_arithmetic     go to state 28
    expr_unary          go to state 29
    expr_term           go to state 30
    factor              go to state 31
    array_access        go to state 32


State 54

    6 statement: statement COMMENT •

    $default  reduce using rule 6 (statement)


State 55

   26 while_statement: marker WHILE • expression_bool DO marker statement_list DONE

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    NOT      shift, and go to state 43
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 44

    expression_bool  go to state 85
    expr_bool_and    go to state 46
    expr_bool_not    go to state 47
    primary_bool     go to state 48
    expr_bool        go to state 49
    expression       go to state 50
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 56

   29 for_first: FOR • ID IN expression DOT DOT expression

    ID  shift, and go to state 86


State 57

   28 for_statement: marker for_first • DO statement_list DONE marker

    DO  shift, and go to state 87


State 58

   50 expression_list: expression_list COMMA • expr_arithmetic

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expr_arithmetic  go to state 88
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 59

   53 expr_arithmetic: expr_arithmetic PLUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expr_unary    go to state 89
    expr_term     go to state 30
    factor        go to state 31
    array_access  go to state 37


State 60

   54 expr_arithmetic: expr_arithmetic MINUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expr_unary    go to state 90
    expr_term     go to state 30
    factor        go to state 31
    array_access  go to state 37


State 61

   59 expr_term: expr_term MULT • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    factor        go to state 91
    array_access  go to state 37


State 62

   60 expr_term: expr_term DIV • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    factor        go to state 92
    array_access  go to state 37


State 63

   61 expr_term: expr_term MOD • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    factor        go to state 93
    array_access  go to state 37


State 64

   48 assignment: array_access ASSIGN • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 94
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 65

   47 assignment: ID ASSIGN expression •

    $default  reduce using rule 47 (assignment)


State 66

   53 expr_arithmetic: expr_arithmetic • PLUS expr_unary
   54                | expr_arithmetic • MINUS expr_unary
   70 array_access: ID LBRACKET expr_arithmetic • RBRACKET

    PLUS      shift, and go to state 59
    MINUS     shift, and go to state 60
    RBRACKET  shift, and go to state 95


State 67

   69 factor: LPAREN expression RPAREN •

    $default  reduce using rule 69 (factor)


State 68

   45 repeat_statement: REPEAT repeat_expression DO • statement_list DONE

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9
    REPEAT   shift, and go to state 10
    DO       shift, and go to state 11
    IF       shift, and go to state 12
    SWITCH   shift, and go to state 13

    WHILE     reduce using rule 34 (marker)
    FOR       reduce using rule 34 (marker)
    $default  reduce using rule 14 (statement)

    statement_list      go to state 96
    statement           go to state 16
    if_statement        go to state 17
    if_else_statement   go to state 18
    switch_statement    go to state 19
    while_statement     go to state 20
    do_until_statement  go to state 21
    for_statement       go to state 22
    marker              go to state 23
    repeat_statement    go to state 24
    assignment          go to state 25
    expression          go to state 26
    expression_list     go to state 27
    expr_arithmetic     go to state 28
    expr_unary          go to state 29
    expr_term           go to state 30
    factor              go to state 31
    array_access        go to state 32


State 69

   27 do_until_statement: DO marker statement_list • UNTIL expression_bool

    UNTIL  shift, and go to state 97


State 70

   35 expr_bool_not: NOT expr_bool_not •

    $default  reduce using rule 35 (expr_bool_not)


State 71

   31 expression_bool: expression_bool • OR marker expr_bool_and
   37 primary_bool: LPAREN expression_bool • RPAREN

    OR      shift, and go to state 73
    RPAREN  shift, and go to state 98


State 72

   39 expr_bool: expression • EQ expression
   40          | expression • NE expression
   41          | expression • GT expression
   42          | expression • GE expression
   43          | expression • LT expression
   44          | expression • LE expression
   69 factor: LPAREN expression • RPAREN

    GT      shift, and go to state 76
    GE      shift, and go to state 77
    LT      shift, and go to state 78
    LE      shift, and go to state 79
    EQ      shift, and go to state 80
    NE      shift, and go to state 81
    RPAREN  shift, and go to state 67


State 73

   31 expression_bool: expression_bool OR • marker expr_bool_and

    $default  reduce using rule 34 (marker)

    marker  go to state 99


State 74

   15 if_statement: IF expression_bool THEN • marker statement_list FI marker
   16 if_else_statement: IF expression_bool THEN • marker statement_then else_part FI marker

    $default  reduce using rule 34 (marker)

    marker  go to state 100


State 75

   33 expr_bool_and: expr_bool_and AND • marker expr_bool_not

    $default  reduce using rule 34 (marker)

    marker  go to state 101


State 76

   41 expr_bool: expression GT • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 102
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 77

   42 expr_bool: expression GE • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 103
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 78

   43 expr_bool: expression LT • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 104
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 79

   44 expr_bool: expression LE • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 105
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 80

   39 expr_bool: expression EQ • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 106
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 81

   40 expr_bool: expression NE • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 35
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9

    expression       go to state 107
    expression_list  go to state 27
    expr_arithmetic  go to state 28
    expr_unary       go to state 29
    expr_term        go to state 30
    factor           go to state 31
    array_access     go to state 37


State 82

   19 switch_statement: SWITCH LPAREN expression_switch • RPAREN ENDLINE marker case_list marker default_clause ENDLINE FSWITCH marker

    RPAREN  shift, and go to state 108


State 83

   20 expression_switch: expression •

    $default  reduce using rule 20 (expression_switch)


State 84

    2 statement_list: statement ENDLINE statement_list •

    $default  reduce using rule 2 (statement_list)


State 85

   26 while_statement: marker WHILE expression_bool • DO marker statement_list DONE
   31 expression_bool: expression_bool • OR marker expr_bool_and

    OR  shift, and go to state 73
    DO  shift, and go to state 109


State 86

   29 for_first: FOR ID • IN expression DOT DOT expression

    IN  shift, and go to state 110


State 87

   28 for_statement: marker for_first DO • statement_list DONE marker

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    PLUS     shift, and go to state 5
    MINUS    shift, and go to state 6
    PI       shift, and go to state 7
    E        shift, and go to state 8
    LPAREN   shift, and go to state 9
    REPEAT   shift, and go to state 10
    DO       shift, and go to state 11
    IF       shift, and go to state 12
    SWITCH   shift, and go to state 13
